# asimov-brightdata-module

./: CHANGES.md  Cargo.toml  Makefile  README.md
.asimov/: module.yaml
.config/: gemspec.rb  package.json  pyproject.toml
.github/workflows/: release.yaml
src/: api.rs  dataset.rs  datasets.rs  jq.rs  lib.rs  main.rs
src/api/: scrape.rs  trigger.rs
src/cataloger/: main.rs
src/fetcher/: main.rs
src/importer/: main.rs
src/jq/: x_profile.jq
tests/fixtures/: amazon_product.json  crunchbase_organization.json  linkedin_company.json  linkedin_profile.json  x_profile.json  x_profile.jsonld
