# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-brightdata-module"
version = "0.0.4"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for data import powered by the Bright Data web data platform."
#documentation = "https://docs.rs/asimov-brightdata-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-brightdata-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
    "command-line-utilities",
    "api-bindings",
    "web-programming::http-client",
    "text-processing",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["pretty", "dep:clientele"]
pretty = ["dep:colored_json"]
std = [
    "asimov-module/std",
    "clientele/std",
    "jq/std",
    "serde/std",
    "tracing-subscriber?/fmt",
    "tracing-subscriber?/std",
]
tracing = ["dep:tracing-subscriber"]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.21", default-features = false, features = [
	"serde",
] }
clientele = { version = "0.3", default-features = false, features = [
    "argfile",
    "dotenv",
    "wild",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }
jq = { version = "0.1", default-features = false, features = ["all"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "alloc",
    "tracing-log",
], optional = true }
ureq = { version = "3.0", default-features = false, features = [
    "platform-verifier",
    "rustls",
    "json",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-brightdata-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-brightdata-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-brightdata-importer"
path = "src/importer/main.rs"
required-features = ["cli"]
